# nordic_uart

./: .gitignore  CMakeLists.txt  README.md  ozone.jdebug  prj.conf
src/: main.c  nus.c  nus.h
